--- a/Kasety/Kasety.csproj
+++ b/Kasety/Kasety.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cassette.cs" />
     <Compile Include="DB.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -70,11 +71,29 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormDodajKasete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDodajKasete.Designer.cs">
+      <DependentUpon>FormDodajKasete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormListaKaset.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormListaKaset.Designer.cs">
+      <DependentUpon>FormListaKaset.cs</DependentUpon>
+    </Compile>
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDodajKasete.resx">
+      <DependentUpon>FormDodajKasete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormListaKaset.resx">
+      <DependentUpon>FormListaKaset.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
