--- a/Kasety/Kasety.csproj
+++ b/Kasety/Kasety.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnTheCassette.cs" />
     <Compile Include="UserList.cs">
       <SubType>Form</SubType>
     </Compile>
