--- a/Kasety/Kasety.csproj
+++ b/Kasety/Kasety.csproj
@@ -92,7 +92,19 @@
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnCas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReturnCas.Designer.cs">
+      <DependentUpon>ReturnCas.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReturnTheCassette.cs" />
+    <Compile Include="SelectUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectUser.Designer.cs">
+      <DependentUpon>SelectUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +138,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReturnCas.resx">
+      <DependentUpon>ReturnCas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SelectUser.resx">
+      <DependentUpon>SelectUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
