--- a/Kasety/Kasety.csproj
+++ b/Kasety/Kasety.csproj
@@ -63,6 +63,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addToQueue.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addToQueue.Designer.cs">
+      <DependentUpon>addToQueue.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,12 @@
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QueueForm.Designer.cs">
+      <DependentUpon>QueueForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReturnCas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,12 +123,16 @@
     <Compile Include="Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Titles.cs" />
     <Compile Include="UserList.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UserList.Designer.cs">
       <DependentUpon>UserList.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="addToQueue.resx">
+      <DependentUpon>addToQueue.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddUser.resx">
       <DependentUpon>AddUser.cs</DependentUpon>
     </EmbeddedResource>
@@ -138,6 +154,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="QueueForm.resx">
+      <DependentUpon>QueueForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReturnCas.resx">
       <DependentUpon>ReturnCas.cs</DependentUpon>
     </EmbeddedResource>
