--- a/Kasety/Kasety.csproj
+++ b/Kasety/Kasety.csproj
@@ -77,6 +77,18 @@
     </Compile>
     <Compile Include="Cassette.cs" />
     <Compile Include="DB.cs" />
+    <Compile Include="doEditTitle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="doEditTitle.Designer.cs">
+      <DependentUpon>doEditTitle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditUser.Designer.cs">
+      <DependentUpon>EditUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +135,13 @@
     <Compile Include="Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Title.cs" />
+    <Compile Include="TitleEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TitleEdit.Designer.cs">
+      <DependentUpon>TitleEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Titles.cs" />
     <Compile Include="UserList.cs">
       <SubType>Form</SubType>
@@ -135,6 +154,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddUser.resx">
       <DependentUpon>AddUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="doEditTitle.resx">
+      <DependentUpon>doEditTitle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditUser.resx">
+      <DependentUpon>EditUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -165,6 +190,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TitleEdit.resx">
+      <DependentUpon>TitleEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserList.resx">
       <DependentUpon>UserList.cs</DependentUpon>
